# screenly

./: .env.example  .env.template  .gitignore  AGENTS.md  CLAUDE.md  PRODUCT.md  design.md  package-lock.json  package.json  task.md  turbo.json
.agents/: AGENTS.md
.orchids/: orchids.json
apps/app/: app.json  package.json
apps/app/src/app/: _layout.tsx  add-rule.tsx  block.tsx  onboarding.tsx  unlock-confirm.tsx
apps/app/src/lib/: auth.ts  enforcer.ts  orpc.ts  polyfill.ts
apps/mobile/: metro.config.js  package.json
apps/mobile/android/: settings.gradle
apps/mobile/app/: add-rule.tsx  index.tsx  onboarding.tsx  setup.tsx
apps/mobile/app/(auth)/: sign-in.tsx  sign-up.tsx
apps/mobile/app/(tabs)/: account.tsx  index.tsx
apps/mobile/lib/: api.ts  orpc.ts
apps/mobile/lib/solana/: config.ts
apps/mobile/modules/screenly-enforcer/: expo-module.config.json
apps/mobile/scripts/: gen-key.mjs
apps/screenly-escrow/: .gitignore  Anchor.toml  Dockerfile  docker-deploy.sh  program-keypair.json
apps/website/: .cta.json  README.md  drizzle.config.ts  hero.ts  package.json  vite.config.ts
apps/website/public/: app-release.apk
apps/website/src/: routeTree.gen.ts  styles.css
programs/screenly-escrow/: Cargo.toml  deploy.sh  keypair.json
programs/screenly-escrow/programs/screenly-escrow/: Cargo.toml
programs/screenly-escrow/programs/screenly-escrow/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/screenly-escrow/programs/screenly-escrow/src/instructions/: deposit.rs  mod.rs  remove.rs
scripts/: generate-keypair.mjs
(+47 files in other folders)
